Cleanup build warnings